# mittel-engagement

./: .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix  flake.nix  shell.nix
.sqlx/: query-0834a695fd04ad13a5728f9c474c179f209f2b7b5b4ecbd3249cdbe09d5e22d5.json  query-2e8935153be63d684c378f3d8f14d9fcfa2697a31b9a8b01a05b889e8103d055.json  query-2f7ad3924139318d504c57ae0a203cb65686f5fc6814b3a74e65806c05f57538.json  query-32fee94d041609a908d37d2bac7b14f22a7d6018e0eac8f55af415e56b05d3da.json  query-5dba4fb7611e9a3cc99deb504f7660a4eb40c1a0bc5998de9f47f5b05a494eac.json  query-ae96a49414c5352b10234662f8cee671525e6ea5c8b28cbbe7245ef7837e5057.json  query-c6133e1bfd095847513d4446a7358a7a19797b01ae8378d08557bdc13d7d6233.json  query-d677c8d69820ba4fb3ea3e6e42def48dfd151394fcb07136c387868b070ac5e5.json  query-edd3efbfc2a6a54871ed7dfe5a413ad3928046841e094b71182fc88f7e21ddbd.json  query-f9b0d724698fabf6ce0a8f73574c1b743c7404f7fe27d76661d727c35b44abb8.json
migrations/: 20250919055446_init.up.sql  20250922233426_add_aggregates_table.down.sql  20250930163637_add_more_tables.down.sql  20250930163637_add_more_tables.up.sql
src/: db.rs  domain.rs  main.rs  posts.rs  users.rs
src/http/: extractors.rs  middleware.rs  mod.rs  routes.rs  state.rs
