[package]
name = "mittel-engagement"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.4"
chrono = { version = "0.4.42", features = ["serde"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
serde = "1.0.225"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["chrono", "mysql", "runtime-tokio", "tls-rustls-aws-lc-rs", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde"] }
